# codex_session_renamer

./: .gitignore  README.md  SKILL.md  pyproject.toml
.github/workflows/: test.yml
agents/: openai.yaml
assets/: review_template.html
runbooks/: apply-approved.md  browser-usage.md  codex-subagent.md  remote-fallbacks.md  start-review-from-web.md  troubleshooting.md
scripts/: install_skill.py  restart_review_server.ps1  session_renamer.py
tests/: test_session_renamer.py
