[project]
name = "codex-session-renamer"
version = "0.1.0"
description = "Review-first Codex session title renamer skill with HTML approval workflow."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "David" }]
keywords = ["codex", "skill", "session", "renamer", "vllm"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/David-Lzy/codex_session_renamer"
Repository = "https://github.com/David-Lzy/codex_session_renamer"

[tool.pytest.ini_options]
testpaths = ["tests"]
